<resources>
    <string name="app_name">CarOLX</string>
    <string name="username_password">"  Username And Password"</string>
    <string name="phone">"  Continue with Phone"</string>
    <string name="google">"  Continue with Google"</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">sign in</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="user_email">Email</string>
    <string name="next">NEXT</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="signin">SIGN IN</string>
    <string name="notauser">Not a Registered User ?</string>
    <string name="sigup">SIGN UP</string>
    <string name="forgetPassword">Forget password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>


</resources>
