<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_signup" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingLeft="20dp"
            android:text="Create Your Account"
            android:textColor="@color/four"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/user_email">


            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alike"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password">


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alike"
                android:inputType="textPassword"
                android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/btn_rounded_shape"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/have_account"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/four"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/five"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>




    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
       />

</LinearLayout>




