<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/backgroung_colr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:padding="20dp"
            android:text="Sell It "
            android:textAllCaps="false"
            android:textColor="@color/logo_color"
            android:textSize="60dp"
            android:textStyle="italic"
            android:transitionName="logo_text"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/cars"
            android:transitionName="logo_image"
            />

    <!--<androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_gravity="center"

       />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/login_userPass"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/login"
            android:fontFamily="@font/roboto"
            android:padding="15dp"
            android:text="@string/username_password"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/button_textclr"
            />

        <Button
            android:id="@+id/login_Google"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/googlee"
            android:fontFamily="@font/roboto"
            android:padding="15dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/button_textclr"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/login_Phone"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/phone"
            android:fontFamily="@font/roboto"
            android:padding="15dp"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/button_textclr"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>


